Fix forced close logic; better logging
git-svn-id: file:///home/svn/IPC@14629 1e6d2d28-e1fb-0310-b8ab-81908d8c6b6a